--- a/index.html
+++ b/index.html
@@ -234,12 +234,7 @@
             <!-- <p><img src="photo/IMG_5231.jpg" alt=""></p> -->
         </div>
         <div class="slide">
-            <div class="slide-bun">
-                <div class="haikei">
-                    <p>slide</p>
-                </div>
-            </div>
-            <hr>
+            <h2 class="slide-bun">slide</h2>
         </div>
         <div class="more-link-s">
             <p class="more-s"><a href="photo.html">もっと見る？</a></p>
