--- a/work.html
+++ b/work.html
@@ -40,6 +40,7 @@
     <div class="work-list">
         <p><a href="#bunner">BUNNER</a></p>
         <p><a href="#lp">LANDINGPAGE</a></p>
+        <p><a href="#cs">CORPORATESITE</a></p>
         <p><a href="#logo">LOGO</a></p>
         <p><a href="#illust">ILLUST</a></p>
         <p><a href="#bc">BUSINESSCARD</a></p>
@@ -93,7 +94,7 @@
                 <h2>LANDING PAGE</h2>
             </div>
         </div>
-        <div class="mockup-gazou">
+        <div id="cs" class="mockup-gazou">
             <p><a href="workcs.html"><img src="mockup/cspcsp.jpg" alt="LP"></a></p>
             <div class="sp-title">
                 <h2>CORPORATE SITE</h2>
