--- a/index.html
+++ b/index.html
@@ -199,12 +199,7 @@
                 </ul>
             </div>
             <div class="slide">
-                <div class="slide-bun">
-                    <div class="haikei">
-                        <p>slide</p>
-                    </div>
-                </div>
-                <hr>
+                <h2 class="slide-bun">slide</h2>
             </div>
             <div class="more-link-s">
                 <p class="more-s"><a href="work.html">もっと見る？</a></p>
