--- a/contact.html
+++ b/contact.html
@@ -77,6 +77,9 @@
             </ul>
         </nav>
     </main>
+    <div>
+        <p class="footer-illust" style="text-align: center;"><img src="illust/mudai91.png" alt="猫"></p>
+    </div>
     <div class="footer-frame">
         <ul>
             <li><a href="about.html">ABOUT</a></li>
