--- a/contact.html
+++ b/contact.html
@@ -78,7 +78,7 @@
         </nav>
     </main>
     <div>
-        <p class="footer-illust" style="text-align: center;"><img src="illust/mudai91.png" alt="猫"></p>
+        <p class="footer-illust-c" style="text-align: center;"><img src="illust/mudai91.png" alt="猫"></p>
     </div>
     <div class="footer-frame">
         <ul>
