--- a/worklgf.html
+++ b/worklgf.html
@@ -59,7 +59,7 @@
             <dt>● 費用</dt>
             <dd>¥20,000〜</dd>
             <dt>● point</dt>
-            <dd>当サイトのイメージである猫を元に作成しました。手書きでデザインすることで愛着の湧くロゴに仕上げました。<br>"neco to design" の to を猫のひげで表現し、デザインしています。
+            <dd>当サイトのイメージである猫を元に作成しました。手書きでデザインすることで愛着の湧くロゴに仕上げました。"neco to design" の to を猫のひげで表現し、デザインしています。
             </dd>
         </dl>
     </div>
