--- a/worklpf.html
+++ b/worklpf.html
@@ -60,8 +60,9 @@
             <dd>¥50,000〜</dd>
             <dt>● point</dt>
             <dd>女性がメインターゲットということで、淡いピンクのメインカラーで柔らかさを表現し<br>
-                幅広い年齢層の方に利用していただけるようにヘアスタイルの写真を選定しました。</dd>
-            アクセントに四角形だけでなく、いろんな形の要素を使用することで堅苦しさのない雰囲気を出すように作成しました。<br>
+                幅広い年齢層の方に利用していただけるようにヘアスタイルの写真を選定しました。<br>
+                アクセントに四角形だけでなく、いろんな形の要素を使用することで堅苦しさのない雰囲気を出すように作成しました。
+            </dd>
         </dl>
     </div>
     <div class="gazou-kakudai">
