--- a/worklps.html
+++ b/worklps.html
@@ -34,7 +34,7 @@
         <p><img src="mockup/lp01w.jpg" alt="lp"></p>
     </div>
     <div class="sakuhin-syousai">
-        <h1>コワーキングスペースLP</h1>
+        <h1>コワーキングLP</h1>
     </div>
     <div class="hamburger"><span></span></div>
     <nav class="sp-navi">
