--- a/worklgf.html
+++ b/worklgf.html
@@ -34,7 +34,7 @@
         <p><img src="illust/mudai23.png" alt="ロゴ"></p>
     </div>
     <div class="sakuhin-syousai">
-        <h1>neco to design ロゴ</h1>
+        <h1>ネコトデザインロゴ</h1>
     </div>
     <div class="hamburger"><span></span></div>
     <nav class="sp-navi">
