--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </ul>
         </nav>
     </section>
-    <div class="sp-main-visual">
+    <div class="sp-main-visual" id="sp-mv">
         <div class="sp-main">
             <p class="spmain-haikei"><img src="illust/mudai89.png" alt="背景"></p>
             <p class="sp-mainlogo"><img src="illust/mudai23.png" alt="ロゴ"></p>
@@ -254,6 +254,9 @@
         <p class="copyright">©️ neco to design</p>
         <p class="to-top">
             <a href="#top"><img src="illust/mudai77.png" alt="トップへ"></a>
+        </p>
+        <p class="sp-to-top">
+            <a href="#sp-mv"><img src="illust/mudai77.png" alt="トップへ"></a>
         </p>
     </div>
 
