--- a/index.html
+++ b/index.html
@@ -253,12 +253,12 @@
         </div>
         <p class="copyright">©️ neco to design</p>
 
-        <p class="to-top">
+        <div class="to-top">
             <a href="#top"><img src="illust/mudai77.png" alt="トップへ"></a>
-        </p>
-        <p class="sp-to-top">
+        </div>
+        <div class="sp-to-top">
             <a href="#sp-mv"><img src="illust/mudai77.png" alt="トップへ"></a>
-        </p>
+        </div>
     </div>
 
 
