--- a/index.html
+++ b/index.html
@@ -252,9 +252,10 @@
             <p><a href="https://www.threads.net/@neco_to_design"><img src="illust/mudai49.png" alt="スレッズ"></a></p>
         </div>
         <p class="copyright">©️ neco to design</p>
-
-        <div class="to-top">
-            <a href="#top"><img src="illust/mudai77.png" alt="トップへ"></a>
+        <div class="pc-to-top">
+            <div class="to-top">
+                <a href="#top"><img src="illust/mudai77.png" alt="トップへ"></a>
+            </div>
         </div>
         <div class="sp-to-top">
             <a href="#sp-mv"><img src="illust/mudai77.png" alt="トップへ"></a>
