--- a/index.html
+++ b/index.html
@@ -325,6 +325,14 @@
                 autoplay: true,
                 autoplaySpeed: 4000,
                 arrows: false,
+                Responsive: [
+                    {
+                        breakpoint: 767,
+                        settings: {
+                            slidesToShow: 1,
+                        },
+                    },
+                ],
             });
         });
 
