--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
             <div class="mockup">
                 <ul>
                     <li class="pc-gazou"><a href="worklps.html"><img src="mockup/lp01w.jpg" alt="LP"></a></li>
-                    <li class="sp-gazou"><a href="workbns.html"><img src="mockup/bunner01w.jpg" alt="バナー"></a></li>
+                    <li class="pc-gazou"><a href="workbns.html"><img src="mockup/bunner01w.jpg" alt="バナー"></a></li>
                     <li class="pc-gazou"><a href="worklpf.html"><img src="mockup/lp02w.jpg" alt="LP"></a></li>
                     <li class="pc-gazou"><a href="worklgf.html"><img src="mockup/25723889_s.jpg" alt=""></a></li>
                     <li class="pc-gazou"><a href="workbnf.html"><img src="mockup/bunner0302.jpg" alt=""></a></li>
