--- a/index.html
+++ b/index.html
@@ -343,6 +343,14 @@
                 autoplay: true,
                 autoplaySpeed: 2000,
                 arrows: false,
+                responsive: [
+                    {
+                        breakpoint: 767,
+                        settings: {
+                            slidesToShow: 1,
+                        },
+                    },
+                ],
             });
         });
 
