--- a/photo.html
+++ b/photo.html
@@ -101,6 +101,9 @@
             </div>
         </div>
     </div>
+    <div>
+        <p class="footer-illust-c" style="text-align: center;"><img src="illust/mudai86.png" alt="写真イラスト"></p>
+    </div>
     <div class="footer-frame">
         <ul>
             <li><a href="about.html">ABOUT</a></li>
