--- a/index.html
+++ b/index.html
@@ -257,8 +257,10 @@
                 <a href="#top"><img src="illust/mudai77.png" alt="トップへ"></a>
             </div>
         </div>
-        <div class="sp-to-top">
-            <a href="#sp-mv"><img src="illust/mudai77.png" alt="トップへ"></a>
+        <div class="sp-top">
+            <div class="sp-to-top">
+                <a href="#sp-mv"><img src="illust/mudai77.png" alt="トップへ"></a>
+            </div>
         </div>
     </div>
 
