--- a/photo.html
+++ b/photo.html
@@ -38,7 +38,7 @@
         <h1 class="shashinillust-title">しゃしん。</h1>
     </div>
     <div class="hamburger"><span></span></div>
-    <nav class="sp-navi">
+    <nav class="sp-navi" id="sp-mv">
         <ul>
             <li><a href="about.html"><span>A</span>BOUT</a></li>
             <li><a href="index.html#service"><span>S</span>ERVICE</a></li>
