--- a/work.html
+++ b/work.html
@@ -58,7 +58,7 @@
             </div>
         </div>
         <div class="hamburger"><span></span></div>
-        <nav class="sp-navi">
+        <nav class="sp-navi" id="sp-mv">
             <ul>
                 <li><a href="about.html"><span>A</span>BOUT</a></li>
                 <li><a href="index.html#service"><span>S</span>ERVICE</a></li>
