--- a/workbns.html
+++ b/workbns.html
@@ -37,7 +37,7 @@
         <h1>携帯プランバナー</h1>
     </div>
     <div class="hamburger"><span></span></div>
-    <nav class="sp-navi">
+    <nav class="sp-navi" id="sp-mv">
         <ul>
             <li><a href="about.html"><span>A</span>BOUT</a></li>
             <li><a href="index.html#service"><span>S</span>ERVICE</a></li>
