--- a/work.html
+++ b/work.html
@@ -190,6 +190,32 @@
                 $('.hamburger').toggleClass('open')
             });
 
+            // トップへボタン途中から表示
+
+            // pc版
+
+            jQuery(function ($) {
+                $(window).on('scroll', function () {
+                    if ($(window).scrollTop() > 300) {
+                        $('.to-top').fadeIn(400);
+                    } else {
+                        $('.to-top').fadeOut(400);
+                    }
+                });
+            });
+
+            // スマホ版
+
+            jQuery(function ($) {
+                $(window).on('scroll', function () {
+                    if ($(window).scrollTop() > 300) {
+                        $('.sp-to-top').fadeIn(400);
+                    } else {
+                        $('.sp-to-top').fadeOut(400);
+                    }
+                });
+            });
+
             // ローディング画面
 
             $(".loader").delay(1000).fadeOut(600);
