--- a/work.html
+++ b/work.html
@@ -38,14 +38,14 @@
         <h1 class="seisaku">せいさくぶつ。</h1>
     </div>
     <div class="work-list">
-        <p><a href="#bunner">BUNNER</a></p>
-        <p><a href="#lp">LANDINGPAGE</a></p>
-        <p><a href="#cs">CORPORATESITE</a></p>
-        <p><a href="#logo">LOGO</a></p>
-        <p><a href="#illust">ILLUST</a></p>
-        <p><a href="#bc">BUSINESSCARD</a></p>
-        <p><a href="#flyer">FLYER</a></p>
-        <p><a href="#leaflet">LEAFLET</a></p>
+        <p><a href="#bunner">BUNNER <span>/ バナー</span></a></p>
+        <p><a href="#lp">LANDINGPAGE <span>/ ランディングページ</span></a></p>
+        <p><a href="#cs">CORPORATESITE <span>/ コーポレートサイト</span></a></p>
+        <p><a href="#logo">LOGO <span>/ ロゴ</span></a></p>
+        <p><a href="#illust">ILLUST <span>/ イラスト</span></a></p>
+        <p><a href="#bc">BUSINESSCARD <span>/ ビジネスカード</span></a></p>
+        <p><a href="#flyer">FLYER <span>/ フライヤー</span></a></p>
+        <p><a href="#leaflet">LEAFLET <span>/ リーフレット</span></a></p>
     </div>
     <div class="mockup-w">
         <div id="bunner" class="mockup-gazou">
