--- a/work.html
+++ b/work.html
@@ -38,23 +38,23 @@
         <h1 class="seisaku">せいさくぶつ。</h1>
     </div>
     <div class="work-list">
-        <p><a href="#bunner">BUNNER <span>/ バナー</span></a></p>
-        <p><a href="#lp">LANDINGPAGE <span>/ ランディングページ</span></a></p>
-        <p><a href="#cs">CORPORATESITE <span>/ コーポレートサイト</span></a></p>
-        <p><a href="#logo">LOGO <span>/ ロゴ</span></a></p>
-        <p><a href="#illust">ILLUST <span>/ イラスト</span></a></p>
-        <p><a href="#bc">BUSINESSCARD <span>/ ビジネスカード</span></a></p>
-        <p><a href="#flyer">FLYER <span>/ フライヤー</span></a></p>
-        <p><a href="#leaflet">LEAFLET <span>/ リーフレット</span></a></p>
+        <p><a href="#bunner">BUNNER</a></p>
+        <p><a href="#lp">LANDINGPAGE</a></p>
+        <p><a href="#cs">CORPORATESITE</a></p>
+        <p><a href="#logo">LOGO</a></p>
+        <p><a href="#illust">ILLUST</a></p>
+        <p><a href="#bc">BUSINESSCARD</a></p>
+        <p><a href="#flyer">FLYER</a></p>
+        <p><a href="#leaflet">LEAFLET</a></p>
     </div>
     <div class="mockup-w">
         <div id="bunner" class="mockup-gazou">
             <p><a href="workbnf.html"><img src="mockup/bunner0302.jpg" alt="バナー"></a></p>
             <div class="sp-title">
-                <h2>BUNNER</h2>
+                <h2>BUNNER <span>/ バナー</span></h2>
             </div>
             <div class="mockup-title">
-                <h2>BUNNER</h2>
+                <h2>BUNNER <span>/ バナー</span></h2>
             </div>
         </div>
         <div class="hamburger"><span></span></div>
@@ -70,46 +70,46 @@
         <div class="mockup-gazou">
             <p><a href="workbns.html"><img src="mockup/bunner01w.jpg" alt="バナー"></a></p>
             <div class="sp-title">
-                <h2>BUNNER</h2>
+                <h2>BUNNER <span>/ バナー</span></h2>
             </div>
             <div class="mockup-title">
-                <h2>BUNNER</h2>
+                <h2>BUNNER <span>/ バナー</span></h2>
             </div>
         </div>
         <div id="lp" class="mockup-gazou">
             <p><a href="worklpf.html"><img src="mockup/lp02touka.jpg" alt="LP"></a></p>
             <div class="sp-title">
-                <h2>LANDING PAGE</h2>
+                <h2>LANDING PAGE <span>/ ランディングページ</span></h2>
             </div>
             <div class="mockup-title">
-                <h2>LANDING PAGE</h2>
+                <h2>LANDING PAGE <span>/ ランディングページ</span></h2>
             </div>
         </div>
         <div class="mockup-gazou">
             <p><a href="worklps.html"><img src="mockup/lp01w.jpg" alt="LP"></a></p>
             <div class="sp-title">
-                <h2>LANDING PAGE</h2>
+                <h2>LANDING PAGE <span>/ ランディングページ</span></h2>
             </div>
             <div class="mockup-title">
-                <h2>LANDING PAGE</h2>
+                <h2>LANDING PAGE <span>/ ランディングページ</span></h2>
             </div>
         </div>
         <div id="cs" class="mockup-gazou">
             <p><a href="workcs.html"><img src="mockup/cspcsp.jpg" alt="LP"></a></p>
             <div class="sp-title">
-                <h2>CORPORATE SITE</h2>
+                <h2>CORPORATE SITE <span>/ コーポレートサイト</span></h2>
             </div>
             <div class="mockup-title">
-                <h2>CORPORATE SITE</h2>
+                <h2>CORPORATE SITE <span>/ コーポレートサイト</span></h2>
             </div>
         </div>
         <div id="logo" class="mockup-gazou">
             <p class="m-logo"><a href="worklgf.html"><img src="illust/mudai23.png" alt="ロゴ"></a></p>
             <div class="sp-title">
-                <h2>LOGO</h2>
+                <h2>LOGO <span>/ ロゴ</span></h2>
             </div>
             <div class="mockup-title">
-                <h2>LOGO</h2>
+                <h2>LOGO <span>/ ロゴ</span></h2>
             </div>
         </div>
         <div id="illust" class="mockup-gazou">
@@ -117,10 +117,10 @@
                 <p>coming soon</p>
             </div>
             <div class="sp-title">
-                <h2>ILLUST</h2>
+                <h2>ILLUST <span>/ イラスト</span></h2>
             </div>
             <div class="mockup-title">
-                <h2>ILLUST</h2>
+                <h2>ILLUST <span>/ イラスト</span></h2>
             </div>
         </div>
         <div id="bc" class="mockup-gazou">
@@ -128,10 +128,10 @@
                 <p>coming soon</p>
             </div>
             <div class="sp-title">
-                <h2>BUSINESS CARD</h2>
+                <h2>BUSINESS CARD <span>/ ビジネスカード</span></h2>
             </div>
             <div class="mockup-title">
-                <h2>BUSINESS CARD</h2>
+                <h2>BUSINESS CARD <span>/ ビジネスカード</span></h2>
             </div>
         </div>
         <div id="flyer" class="mockup-gazou">
@@ -139,10 +139,10 @@
                 <p>coming soon</p>
             </div>
             <div class="sp-title">
-                <h2>FLYER</h2>
+                <h2>FLYER <span>/ フライヤー</span></h2>
             </div>
             <div class="mockup-title">
-                <h2>FLYER</h2>
+                <h2>FLYER <span>/ フライヤー</span></h2>
             </div>
         </div>
         <div id="leaflet" class="mockup-gazou">
@@ -150,10 +150,10 @@
                 <p>coming soon</p>
             </div>
             <div class="sp-title">
-                <h2>LEAFLET</h2>
+                <h2>LEAFLET <span>/ リーフレット</span></h2>
             </div>
             <div class="mockup-title">
-                <h2>LEAFLET</h2>
+                <h2>LEAFLET <span>/ リーフレット</span></h2>
             </div>
         </div>
     </div>
