--- a/work.html
+++ b/work.html
@@ -60,7 +60,7 @@
     </div>
     <div class="mockup-w">
         <div id="bunner" class="mockup-gazou">
-            <p><a href="workbnf.html"><img src="mockup/bunner0302.jpg" alt="バナー"></a></p>
+            <p><a href="workbnf.html"><img src="mockup/bunner0302.jpg" alt="バナー"><span>ハンバーガーバナー</span></a></p>
             <div class="sp-title">
                 <h2>BUNNER <span>/ バナー</span></h2>
             </div>
