--- a/work.html
+++ b/work.html
@@ -119,7 +119,10 @@
             </div>
         </div>
         <div id="logo" class="mockup-gazou">
-            <p class="m-logo"><a href="worklgf.html"><img src="illust/mudai23.png" alt="ロゴ"></a></p>
+            <p class="m-logo">
+                <a href="worklgf.html"><img src="illust/mudai23.png" alt="ロゴ"><span>ネコトデザインロゴ</span>
+                </a>
+            </p>
             <div class="sp-title">
                 <h2>LOGO <span>/ ロゴ</span></h2>
             </div>
