--- a/work.html
+++ b/work.html
@@ -61,9 +61,7 @@
     <div class="mockup-w">
         <div id="bunner" class="mockup-gazou">
             <p>
-                <a href="workbnf.html">
-                    <img src="mockup/bunner0302.jpg" alt="バナー"><span>ハンバーガーバナー</span>
-                </a>
+                <a href="workbnf.html"><img src="mockup/bunner0302.jpg" alt="バナー"></a>
             </p>
             <div class="sp-title">
                 <h2>BUNNER <span>/ バナー</span></h2>
@@ -120,8 +118,7 @@
         </div>
         <div id="logo" class="mockup-gazou">
             <p class="m-logo">
-                <a href="worklgf.html"><img src="illust/mudai23.png" alt="ロゴ"><span>ネコトデザインロゴ</span>
-                </a>
+                <a href="worklgf.html"><img src="illust/mudai23.png" alt="ロゴ"></a>
             </p>
             <div class="sp-title">
                 <h2>LOGO <span>/ ロゴ</span></h2>
