--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
             <p class="gazou-s"><img src="photosozai/mudai30.png" alt="猫２" class="rect"></p>
             <h1 class="logo"><img src="illust/mudai23.png" alt="ロゴ"></h1>
             <p class="scroll">scroll</p>
-            <p class="scroll-foot"><img src="illust/mudai44.png" alt="足跡"></p>
+            <div class="scroll-foot">
+                <p><img src="illust/mudai44.png" alt="足跡"></p>
+            </div>
         </div>
         <!-- ナビメニュー -->
         <nav class="nav-menu">
