--- a/work.html
+++ b/work.html
@@ -59,7 +59,7 @@
         <p><a href="#leaflet">LEAFLET</a></p>
     </div>
     <div class="mockup-w">
-        <p><img src="illust/mudai127.png" alt=""></p>
+        <p class="ear"><img src="illust/mudai127.png" alt=""></p>
         <div id="bunner" class="mockup-gazou">
             <p>
                 <a href="workbnf.html"><img src="mockup/bunner0302.jpg" alt="バナー"></a>
