--- a/work.html
+++ b/work.html
@@ -81,6 +81,7 @@
                 <li><a href="contact.html"><span>C</span>ONTACT</a></li>
             </ul>
         </nav>
+        <p class="ear"><img src="illust/mudai127.png" alt=""></p>
         <div class="mockup-gazou">
             <p><a href="workbns.html"><img src="mockup/bunner01w.jpg" alt="バナー"></a></p>
             <div class="sp-title">
@@ -90,6 +91,7 @@
                 <h2>BUNNER <span>/ バナー</span></h2>
             </div>
         </div>
+        <p class="ear"><img src="illust/mudai127.png" alt=""></p>
         <div id="lp" class="mockup-gazou">
             <p><a href="worklpf.html"><img src="mockup/lp02touka.jpg" alt="LP"></a></p>
             <div class="sp-title">
@@ -99,6 +101,7 @@
                 <h2>LANDING PAGE <span>/ ランディングページ</span></h2>
             </div>
         </div>
+        <p class="ear"><img src="illust/mudai127.png" alt=""></p>
         <div class="mockup-gazou">
             <p><a href="worklps.html"><img src="mockup/lp01w.jpg" alt="LP"></a></p>
             <div class="sp-title">
@@ -108,6 +111,7 @@
                 <h2>LANDING PAGE <span>/ ランディングページ</span></h2>
             </div>
         </div>
+        <p class="ear"><img src="illust/mudai127.png" alt=""></p>
         <div id="cs" class="mockup-gazou">
             <p><a href="workcs.html"><img src="mockup/cspcsp.jpg" alt="LP"></a></p>
             <div class="sp-title">
@@ -117,6 +121,7 @@
                 <h2>CORPORATE SITE <span>/ コーポレートサイト</span></h2>
             </div>
         </div>
+        <p class="ear"><img src="illust/mudai127.png" alt=""></p>
         <div id="logo" class="mockup-gazou">
             <p class="m-logo">
                 <a href="worklgf.html"><img src="illust/mudai23.png" alt="ロゴ"></a>
@@ -128,6 +133,7 @@
                 <h2>LOGO <span>/ ロゴ</span></h2>
             </div>
         </div>
+        <p class="ear"><img src="illust/mudai127.png" alt=""></p>
         <div id="illust" class="mockup-gazou">
             <div class="no-gazou">
                 <p>coming soon</p>
@@ -139,6 +145,7 @@
                 <h2>ILLUST <span>/ イラスト</span></h2>
             </div>
         </div>
+        <p class="ear"><img src="illust/mudai127.png" alt=""></p>
         <div id="bc" class="mockup-gazou">
             <div class="no-gazou">
                 <p>coming soon</p>
@@ -150,6 +157,7 @@
                 <h2>BUSINESS CARD <span>/ ビジネスカード</span></h2>
             </div>
         </div>
+        <p class="ear"><img src="illust/mudai127.png" alt=""></p>
         <div id="flyer" class="mockup-gazou">
             <div class="no-gazou">
                 <p>coming soon</p>
@@ -161,6 +169,7 @@
                 <h2>FLYER <span>/ フライヤー</span></h2>
             </div>
         </div>
+        <p class="ear"><img src="illust/mudai127.png" alt=""></p>
         <div id="leaflet" class="mockup-gazou">
             <div class="no-gazou">
                 <p>coming soon</p>
