--- a/work.html
+++ b/work.html
@@ -62,7 +62,7 @@
         <p class="ear"><img src="illust/mudai127.png" alt=""></p>
         <div id="bunner" class="mockup-gazou">
             <p>
-                <a href="workbnf.html"><img src="mockup/bunner0302.jpg" alt="バナー"></a>
+                <span>ハンバーガーバナー</span><a href="workbnf.html"><img src="mockup/bunner0302.jpg" alt="バナー"></a>
             </p>
             <div class="sp-title">
                 <h2>BUNNER <span>/ バナー</span></h2>
