--- a/work.html
+++ b/work.html
@@ -83,7 +83,9 @@
         </nav>
         <p class="ear"><img src="illust/mudai127.png" alt=""></p>
         <div class="mockup-gazou">
-            <p><a href="workbns.html"><img src="mockup/bunner01w.jpg" alt="バナー"></a></p>
+            <p>
+                <span>携帯プランバナー</span><a href="workbns.html"><img src="mockup/bunner01w.jpg" alt="バナー"></a>
+            </p>
             <div class="sp-title">
                 <h2>BUNNER <span>/ バナー</span></h2>
             </div>
@@ -93,7 +95,9 @@
         </div>
         <p class="ear"><img src="illust/mudai127.png" alt=""></p>
         <div id="lp" class="mockup-gazou">
-            <p><a href="worklpf.html"><img src="mockup/lp02touka.jpg" alt="LP"></a></p>
+            <p>
+                <span>美容室LP</span><a href="worklpf.html"><img src="mockup/lp02touka.jpg" alt="LP"></a>
+            </p>
             <div class="sp-title">
                 <h2>LANDING PAGE <span>/ ランディングページ</span></h2>
             </div>
@@ -103,7 +107,9 @@
         </div>
         <p class="ear"><img src="illust/mudai127.png" alt=""></p>
         <div class="mockup-gazou">
-            <p><a href="worklps.html"><img src="mockup/lp01w.jpg" alt="LP"></a></p>
+            <p>
+                <span>コワーキングLP</span><a href="worklps.html"><img src="mockup/lp01w.jpg" alt="LP"></a>
+            </p>
             <div class="sp-title">
                 <h2>LANDING PAGE <span>/ ランディングページ</span></h2>
             </div>
@@ -113,7 +119,9 @@
         </div>
         <p class="ear"><img src="illust/mudai127.png" alt=""></p>
         <div id="cs" class="mockup-gazou">
-            <p><a href="workcs.html"><img src="mockup/cspcsp.jpg" alt="LP"></a></p>
+            <p>
+                <span>カフェサイト</span><a href="workcs.html"><img src="mockup/cspcsp.jpg" alt="LP"></a>
+            </p>
             <div class="sp-title">
                 <h2>CORPORATE SITE <span>/ コーポレートサイト</span></h2>
             </div>
@@ -124,7 +132,7 @@
         <p class="ear"><img src="illust/mudai127.png" alt=""></p>
         <div id="logo" class="mockup-gazou">
             <p class="m-logo">
-                <a href="worklgf.html"><img src="illust/mudai23.png" alt="ロゴ"></a>
+                <span>ネコトデザインロゴ</span><a href="worklgf.html"><img src="illust/mudai23.png" alt="ロゴ"></a>
             </p>
             <div class="sp-title">
                 <h2>LOGO <span>/ ロゴ</span></h2>
