--- a/work.html
+++ b/work.html
@@ -96,7 +96,7 @@
         <p class="ear"><img src="illust/mudai127.png" alt=""></p>
         <div id="lp" class="mockup-gazou">
             <p>
-                <span>美容室LP</span><a href="worklpf.html"><img src="mockup/lp02touka.jpg" alt="LP"></a>
+                <span>美容室ランディングページ</span><a href="worklpf.html"><img src="mockup/lp02touka.jpg" alt="LP"></a>
             </p>
             <div class="sp-title">
                 <h2>LANDING PAGE <span>/ ランディングページ</span></h2>
@@ -108,7 +108,7 @@
         <p class="ear"><img src="illust/mudai127.png" alt=""></p>
         <div class="mockup-gazou">
             <p>
-                <span>コワーキングLP</span><a href="worklps.html"><img src="mockup/lp01w.jpg" alt="LP"></a>
+                <span>コワーキングランディングページ</span><a href="worklps.html"><img src="mockup/lp01w.jpg" alt="LP"></a>
             </p>
             <div class="sp-title">
                 <h2>LANDING PAGE <span>/ ランディングページ</span></h2>
