--- a/work.html
+++ b/work.html
@@ -49,14 +49,14 @@
         <h1 class="seisaku">せいさくぶつ。</h1>
     </div>
     <div class="work-list">
-        <p><a href="#bunner">BUNNER</a></p>
-        <p><a href="#lp">LANDINGPAGE</a></p>
-        <p><a href="#cs">CORPORATESITE</a></p>
-        <p><a href="#logo">LOGO</a></p>
-        <p><a href="#illust">ILLUST</a></p>
-        <p><a href="#bc">BUSINESSCARD</a></p>
-        <p><a href="#flyer">FLYER</a></p>
-        <p><a href="#leaflet">LEAFLET</a></p>
+        <p class="u-border"><a href="#bunner">BUNNER</a></p>
+        <p class="u-border"><a href="#lp">LANDINGPAGE</a></p>
+        <p class="u-border"><a href="#cs">CORPORATESITE</a></p>
+        <p class="u-border"><a href="#logo">LOGO</a></p>
+        <p class="u-border"><a href="#illust">ILLUST</a></p>
+        <p class="u-border"><a href="#bc">BUSINESSCARD</a></p>
+        <p class="u-border"><a href="#flyer">FLYER</a></p>
+        <p class="u-border"><a href="#leaflet">LEAFLET</a></p>
     </div>
     <div class="mockup-w">
         <p class="ear"><img src="illust/mudai127.png" alt=""></p>
