--- a/work.html
+++ b/work.html
@@ -49,7 +49,7 @@
         <h1 class="seisaku">せいさくぶつ。</h1>
     </div>
     <div class="work-list">
-        <p class="u-border"><a href="#bunner">BUNNER</a></p>
+        <p class="u-border"><a href="#bunner" class="c-b s-b">BUNNER</a></p>
         <p class="u-border"><a href="#lp">LANDINGPAGE</a></p>
         <p class="u-border"><a href="#cs">CORPORATESITE</a></p>
         <p class="u-border"><a href="#logo">LOGO</a></p>
