--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <br>
                 ここではそんなねこの癒されるいろんな表情を<br>
                 目にしていってみてください。<br>
-                見終える頃には笑顔になていると思いますよ。<br>
+                見終える頃には笑顔になっていると思いますよ。<br>
                 <br>
                 ここがあなたにとっての癒しになれますように。
             </p>
