--- a/work.html
+++ b/work.html
@@ -50,13 +50,13 @@
     </div>
     <div class="work-list">
         <p class="u-border"><a href="#bunner" class="c-b s-b">BUNNER</a></p>
-        <p class="u-border"><a href="#lp">LANDINGPAGE</a></p>
-        <p class="u-border"><a href="#cs">CORPORATESITE</a></p>
-        <p class="u-border"><a href="#logo">LOGO</a></p>
-        <p class="u-border"><a href="#illust">ILLUST</a></p>
-        <p class="u-border"><a href="#bc">BUSINESSCARD</a></p>
-        <p class="u-border"><a href="#flyer">FLYER</a></p>
-        <p class="u-border"><a href="#leaflet">LEAFLET</a></p>
+        <p class="u-border"><a href="#lp" class="c-b s-b">LANDINGPAGE</a></p>
+        <p class="u-border"><a href="#cs" class="c-b s-b">CORPORATESITE</a></p>
+        <p class="u-border"><a href="#logo" class="c-b s-b">LOGO</a></p>
+        <p class="u-border"><a href="#illust" class="c-b s-b">ILLUST</a></p>
+        <p class="u-border"><a href="#bc" class="c-b s-b">BUSINESSCARD</a></p>
+        <p class="u-border"><a href="#flyer" class="c-b s-b">FLYER</a></p>
+        <p class="u-border"><a href="#leaflet" class="c-b s-b">LEAFLET</a></p>
     </div>
     <div class="mockup-w">
         <p class="ear"><img src="illust/mudai127.png" alt=""></p>
