--- a/work.html
+++ b/work.html
@@ -224,6 +224,7 @@
             $(".sp-loader").delay(1000).fadeOut(600);
         });
     </script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
