--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,6 @@
         href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css">
 
     <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-    <link rel="stylesheet" href="js/script.js">
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="illust/favicon.ico" id="favicon">
 </head>
@@ -118,6 +117,7 @@
             $(".sp-loader").delay(1000).fadeOut(600);
         });
     </script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
