--- a/photo.html
+++ b/photo.html
@@ -23,7 +23,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/css/lightbox.css" rel="stylesheet">
-    <link rel="stylesheet" href="js/script.js">
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="illust/favicon.ico" id="favicon">
 </head>
@@ -155,8 +154,10 @@
     <!-- モーダルウィンドウ -->
 
     <script src="https://code.jquery.com/jquery-1.12.4.min.js" type="text/javascript"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/js/lightbox.min.js"
-        type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/js/lightbox.min.js" type="text/javascript">
+    </script>
+
+    <script src="js/script.js"></script>
 </body>
 
 </html>
