--- a/thanks.html
+++ b/thanks.html
@@ -22,7 +22,6 @@
         href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css">
 
     <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-    <link rel="stylesheet" href="js/script.js">
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="illust/favicon.ico" id="favicon">
 </head>
@@ -75,6 +74,7 @@
         <p class="copyright">©️ neco to design</p>
     </div>
 
+    <script src="js/script.js"></script>
 </body>
 
 </html>
