--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
             </ul>
         </nav>
     </section>
-    <div class="about-illust">
+    <div class="about-illust" id="sp-mv">
         <p><img src="illust/mudai54.png" alt="メインビジュアル"></p>
         <h1 class="me">わたしたちのこと。</h1>
     </div>
@@ -68,7 +68,7 @@
         </div>
     </div>
     <div class="hamburger"><span></span></div>
-    <nav class="sp-navi" id="sp-mv">
+    <nav class="sp-navi">
         <ul>
             <li><a href="about.html"><span>A</span>BOUT</a></li>
             <li><a href="index.html#service"><span>S</span>ERVICE</a></li>
