--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
             </ul>
         </nav>
     </section>
-    <div class="about-illust" id="sp-mv">
+    <div class="about-illust">
         <p><img src="illust/mudai54.png" alt="メインビジュアル"></p>
         <h1 class="me">わたしたちのこと。</h1>
     </div>
@@ -67,7 +67,7 @@
             </div>
         </div>
     </div>
-    <div class="hamburger"><span></span></div>
+    <div class="hamburger" id="sp-mv"><span></span></div>
     <nav class="sp-navi">
         <ul>
             <li><a href="about.html"><span>A</span>BOUT</a></li>
