--- a/worklpf.html
+++ b/worklpf.html
@@ -46,8 +46,8 @@
     <div class="sakuhin-syousai">
         <h1>美容室LP</h1>
     </div>
-    <div class="hamburger"><span></span></div>
-    <nav class="sp-navi" id="sp-mv">
+    <div class="hamburger" id="sp-mv"><span></span></div>
+    <nav class="sp-navi">
         <ul>
             <li><a href="about.html"><span>A</span>BOUT</a></li>
             <li><a href="index.html#service"><span>S</span>ERVICE</a></li>
