--- a/work.html
+++ b/work.html
@@ -70,8 +70,8 @@
                 <h2>BUNNER <span>/ バナー</span></h2>
             </div>
         </div>
-        <div class="hamburger"><span></span></div>
-        <nav class="sp-navi" id="sp-mv">
+        <div class="hamburger" id="sp-mv"><span></span></div>
+        <nav class="sp-navi">
             <ul>
                 <li><a href="about.html"><span>A</span>BOUT</a></li>
                 <li><a href="index.html#service"><span>S</span>ERVICE</a></li>
