--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                         <li><img src="illust/mudai25.png" alt="イラスト">
                             <p class="skill-title">illust</p>
                             <p class="skill-setumei">
-                                iPadでアイビスペイントやプロクリエイトなどのお絵描きアプリを使用し、主に手書き感のあるイラストの作成が可能です。このポートフォリオ内のイラストやアイコンは一部を覗き全て作成したものです。
+                                iPadでアイビスペイントやプロクリエイトなどのお絵描きアプリを使用し、主に手書き感のあるイラストの作成が可能です。このポートフォリオ内のイラストやアイコンは全て作成したものです。
                             </p>
                         </li>
                     </ul>
