--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <div class="sp-main-visual" id="sp-mv">
         <div class="sp-main">
             <p class="spmain-haikei"><img src="illust/mudai89.png" alt="背景"></p>
-            <p class="sp-mainlogo"><img src="illust/mudai23.png" alt="ロゴ"></p>
+            <p class="sp-mainlogo"><img src="illust/mudai23.png" alt="ロゴ" class="rect"></p>
         </div>
         <div class="hamburger"><span></span></div>
         <nav class="sp-navi">
