--- a/index.html
+++ b/index.html
@@ -127,6 +127,9 @@
             好きなことを仕事にしたいと思い、思い切って<br class="sp-kaigyou">デザスタの受講を決意。<br>
             夫と猫二匹と暮らしています。
         </div>
+        <div class="more-link">
+            <p class="more"><a href="about.html">もっと知る？</a></p>
+        </div>
     </div>
     <!-- サービス -->
     <section class="service" id="service">
