--- a/work.html
+++ b/work.html
@@ -60,7 +60,7 @@
     <div class="mockup-w">
         <p class="ear"><img src="illust/mudai127.png" alt=""></p>
         <div id="bunner" class="mockup-gazou">
-            <p class="fadeIn">
+            <p class="m-gazou fadeIn">
                 <span>ハンバーガーバナー</span><a href="workbnf.html"><img src="mockup/bunner0302.jpg" alt="バナー"></a>
             </p>
             <div class="sp-title">
