--- a/work.html
+++ b/work.html
@@ -82,7 +82,7 @@
         </nav>
         <p class="ear"><img src="illust/mudai127.png" alt=""></p>
         <div class="mockup-gazou">
-            <p>
+            <p class="m-gazou fadeIn">
                 <span>携帯プランバナー</span><a href="workbns.html"><img src="mockup/bunner01w.jpg" alt="バナー"></a>
             </p>
             <div class="sp-title">
@@ -94,7 +94,7 @@
         </div>
         <p class="ear"><img src="illust/mudai127.png" alt=""></p>
         <div id="lp" class="mockup-gazou">
-            <p>
+            <p class="m-gazou fadeIn">
                 <span>美容室ランディングページ</span><a href="worklpf.html"><img src="mockup/lp02touka.jpg" alt="LP"></a>
             </p>
             <div class="sp-title">
@@ -106,7 +106,7 @@
         </div>
         <p class="ear"><img src="illust/mudai127.png" alt=""></p>
         <div class="mockup-gazou">
-            <p>
+            <p class="m-gazou fadeIn">
                 <span>コワーキングランディングページ</span><a href="worklps.html"><img src="mockup/lp01w.jpg" alt="LP"></a>
             </p>
             <div class="sp-title">
@@ -118,7 +118,7 @@
         </div>
         <p class="ear"><img src="illust/mudai127.png" alt=""></p>
         <div id="cs" class="mockup-gazou">
-            <p>
+            <p class="m-gazou fadeIn">
                 <span>カフェサイト</span><a href="workcs.html"><img src="mockup/cspcsp.jpg" alt="LP"></a>
             </p>
             <div class="sp-title">
@@ -130,7 +130,7 @@
         </div>
         <p class="ear"><img src="illust/mudai127.png" alt=""></p>
         <div id="logo" class="mockup-gazou">
-            <p class="m-logo">
+            <p class="m-logo fadeIn">
                 <span>ネコトデザインロゴ</span><a href="worklgf.html"><img src="illust/mudai23.png" alt="ロゴ"></a>
             </p>
             <div class="sp-title">
